--- a/app/src/main/res/layout/activity_transkipnilai2.xml
+++ b/app/src/main/res/layout/activity_transkipnilai2.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imageView36"
-        android:layout_width="687dp"
-        android:layout_height="262dp"
+        android:layout_width="958dp"
+        android:layout_height="272dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -121,7 +121,7 @@
         android:id="@+id/editTextText9"
         android:layout_width="372dp"
         android:layout_height="37dp"
-        android:background="#DEE1E7"
+        android:background="@drawable/rounded_edittext"
         android:hint="Aruni"
         android:padding="10dp"
         android:textColor="#7D8BB7"
@@ -151,7 +151,7 @@
         android:id="@+id/editTextText10"
         android:layout_width="372dp"
         android:layout_height="37dp"
-        android:background="#DEE1E7"
+        android:background="@drawable/rounded_edittext"
         android:hint="09031282227053"
         android:padding="10dp"
         android:textColor="#7D8BB7"
@@ -181,7 +181,7 @@
         android:id="@+id/editTextText11"
         android:layout_width="372dp"
         android:layout_height="37dp"
-        android:background="#DEE1E7"
+        android:background="@drawable/rounded_edittext"
         android:hint="+62"
         android:padding="10dp"
         android:textColor="#7D8BB7"
@@ -211,7 +211,7 @@
         android:id="@+id/editTextText12"
         android:layout_width="372dp"
         android:layout_height="37dp"
-        android:background="#DEE1E7"
+        android:background="@drawable/rounded_edittext"
         android:hint="4"
         android:padding="10dp"
         android:textColor="#7D8BB7"
