--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -26,40 +26,34 @@
         app:layout_constraintVertical_bias="0.186" />
 
     <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="354dp"
-        android:layout_height="52dp"
-        android:backgroundTint="#BDBDBD"
-        android:enabled="false"
-        android:focusable="false"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:padding="12dp"
-        android:text="NIM"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/editTextText2"
+        android:layout_width="370dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="264dp"
+        android:background="@drawable/rounded_edittext"
+        android:hint="NIM"
+        android:padding="10dp"
+        android:textColor="#7D8BB7"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.306" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/password"
-        android:layout_width="354dp"
-        android:layout_height="52dp"
-        android:backgroundTint="#BDBDBD"
-        android:enabled="false"
-        android:focusable="false"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:padding="12dp"
-        android:text="Password"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/editTextText2"
+        android:layout_width="370dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="340dp"
+        android:background="@drawable/rounded_edittext"
+        android:hint="Password"
+        android:padding="10dp"
+        android:textColor="#7D8BB7"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.383" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnLogin"
