--- a/app/src/main/res/layout/activity_surataktif.xml
+++ b/app/src/main/res/layout/activity_surataktif.xml
@@ -154,7 +154,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.55"
-        app:srcCompat="@drawable/syarat" />
+        app:srcCompat="@drawable/bgr" />
 
     <TextView
         android:id="@+id/textView9"
@@ -180,7 +180,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.708"
-        app:srcCompat="@drawable/syarat" />
+        app:srcCompat="@drawable/bgr" />
 
     <TextView
         android:id="@+id/textView11"
