--- a/app/src/main/res/layout/activity_suratlulus.xml
+++ b/app/src/main/res/layout/activity_suratlulus.xml
@@ -154,7 +154,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.564"
-        app:srcCompat="@drawable/syarat" />
+        app:srcCompat="@drawable/bgr" />
 
     <TextView
         android:id="@+id/textView8"
@@ -194,7 +194,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView18"
         app:layout_constraintVertical_bias="0.746"
-        app:srcCompat="@drawable/syarat" />
+        app:srcCompat="@drawable/bgr" />
 
     <TextView
         android:id="@+id/textView10"
