--- a/app/src/main/res/layout/activity_formuliraktif3.xml
+++ b/app/src/main/res/layout/activity_formuliraktif3.xml
@@ -338,7 +338,7 @@
         android:id="@+id/textView32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="KPM.pdf"
+        android:text="KPM.jpg"
         android:textColor="#255984"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -353,7 +353,7 @@
         android:id="@+id/textView33"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="KSM.pdf"
+        android:text="KSM.jpg"
         android:textColor="#255984"
         android:textSize="15sp"
         android:textStyle="bold"
