--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -16,7 +16,7 @@
         android:gravity="left"
         android:text="Login"
         android:textColor="#143C5E"
-        android:textSize="52sp"
+        android:textSize="52dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,91 +25,66 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.186" />
 
+    <!-- Input Email -->
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/etEmail"
         android:layout_width="370dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="264dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="NIM"
+        android:hint="Email"
         android:padding="10dp"
         android:textColor="#7D8BB7"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        android:textSize="42dp"
+        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Input Password -->
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/etPassword"
         android:layout_width="370dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="340dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@drawable/rounded_edittext"
         android:hint="Password"
         android:padding="10dp"
+        android:inputType="textPassword"
         android:textColor="#7D8BB7"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        android:textSize="42dp"
+        app:layout_constraintTop_toBottomOf="@id/etEmail"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Tombol Login -->
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="346dp"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:backgroundTint="#3672A4"
-        android:padding="12dp"
         android:text="LOGIN"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintTop_toBottomOf="@id/etPassword"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.516" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Forgot Password Text -->
 
-    <Button
-        android:id="@+id/btnRegisterWithGoogle"
-        android:layout_width="375dp"
-        android:layout_height="60dp"
-        android:backgroundTint="#FFFFFF"
-        android:drawablePadding="8dp"
-        android:padding="12dp"
-        android:text="REGISTRASI DENGAN GOOGLE"
-        android:textColor="#3672A4"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.612" />
-
+    <!-- Lupa Password -->
     <TextView
         android:id="@+id/tvForgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:autoLink="all"
-        android:gravity="center"
-        android:linksClickable="true"
         android:text="Lupa Password?"
         android:textColor="#3672A4"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.676" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/imageView4"
