--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -16,7 +16,7 @@
         android:gravity="left"
         android:text="Login"
         android:textColor="#143C5E"
-        android:textSize="52dp"
+        android:textSize="52sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,12 +33,13 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_edittext"
         android:hint="Email"
-        android:padding="10dp"
+        android:minHeight="48dp"
+        android:padding="10sp"
         android:textColor="#7D8BB7"
-        android:textSize="42dp"
-        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />
 
     <!-- Input Password -->
     <EditText
@@ -48,13 +49,14 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_edittext"
         android:hint="Password"
-        android:padding="10dp"
         android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:padding="10dp"
         android:textColor="#7D8BB7"
-        android:textSize="42dp"
-        app:layout_constraintTop_toBottomOf="@id/etEmail"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/etEmail" />
 
     <!-- Tombol Login -->
     <Button
