--- a/app/src/main/res/layout/activity_transkipnilai3.xml
+++ b/app/src/main/res/layout/activity_transkipnilai3.xml
@@ -59,28 +59,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.092" />
 
-    <ImageView
-        android:id="@+id/imageView64"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/back"
+        android:layout_width="68dp"
+        android:layout_height="69dp"
+        android:background="#4A8CC4"
+        android:contentDescription="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintHorizontal_bias="0.026"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.064"
+        app:layout_constraintVertical_bias="0.051"
         app:srcCompat="@drawable/back" />
 
     <ImageView
         android:id="@+id/imageView65"
-        android:layout_width="53dp"
-        android:layout_height="29dp"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.332"
+        app:layout_constraintHorizontal_bias="0.367"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.219"
+        app:layout_constraintVertical_bias="0.199"
         app:srcCompat="@drawable/satu" />
 
     <ImageView
@@ -89,10 +91,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.228"
+        app:layout_constraintVertical_bias="0.211"
         app:srcCompat="@drawable/garisputus" />
 
     <ImageView
@@ -101,10 +103,10 @@
         android:layout_height="33dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.629"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22"
+        app:layout_constraintVertical_bias="0.2"
         app:srcCompat="@drawable/dua1" />
 
     <TextView
@@ -134,23 +136,23 @@
         app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.33" />
+        app:layout_constraintVertical_bias="0.343" />
 
     <EditText
         android:id="@+id/editTextText13"
         android:layout_width="372dp"
         android:layout_height="37dp"
-        android:background="#DEE1E7"
+        android:background="@drawable/rounded_edittext"
         android:hint="Aruni"
         android:padding="10dp"
         android:textColor="#7D8BB7"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.435"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView67"
-        app:layout_constraintVertical_bias="0.183" />
+        app:layout_constraintVertical_bias="0.219" />
 
     <TextView
         android:id="@+id/textView43"
@@ -164,13 +166,13 @@
         app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        app:layout_constraintVertical_bias="0.423" />
 
     <EditText
         android:id="@+id/editTextText14"
         android:layout_width="372dp"
         android:layout_height="37dp"
-        android:background="#DEE1E7"
+        android:background="@drawable/rounded_edittext"
         android:hint="09031282227053"
         android:padding="10dp"
         android:textColor="#7D8BB7"
@@ -180,7 +182,7 @@
         app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView67"
-        app:layout_constraintVertical_bias="0.299" />
+        app:layout_constraintVertical_bias="0.333" />
 
     <TextView
         android:id="@+id/textView44"
@@ -194,13 +196,13 @@
         app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView67"
-        app:layout_constraintVertical_bias="0.36" />
+        app:layout_constraintVertical_bias="0.387" />
 
     <EditText
         android:id="@+id/editTextText15"
         android:layout_width="372dp"
         android:layout_height="37dp"
-        android:background="#DEE1E7"
+        android:background="@drawable/rounded_edittext"
         android:hint="+62"
         android:padding="10dp"
         android:textColor="#7D8BB7"
@@ -210,7 +212,7 @@
         app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView67"
-        app:layout_constraintVertical_bias="0.401" />
+        app:layout_constraintVertical_bias="0.427" />
 
     <TextView
         android:id="@+id/textView45"
@@ -224,13 +226,13 @@
         app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView67"
-        app:layout_constraintVertical_bias="0.474" />
+        app:layout_constraintVertical_bias="0.483" />
 
     <EditText
         android:id="@+id/editTextText16"
         android:layout_width="372dp"
         android:layout_height="37dp"
-        android:background="#DEE1E7"
+        android:background="@drawable/rounded_edittext"
         android:hint="4"
         android:padding="10dp"
         android:textColor="#7D8BB7"
@@ -240,7 +242,7 @@
         app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView67"
-        app:layout_constraintVertical_bias="0.518" />
+        app:layout_constraintVertical_bias="0.526" />
 
     <TextView
         android:id="@+id/textView52"
@@ -256,33 +258,52 @@
         app:layout_constraintTop_toTopOf="@+id/imageView67"
         app:layout_constraintVertical_bias="0.615" />
 
+    <LinearLayout
+        android:id="@+id/layoutCheckboxContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.714" />
+
     <ImageView
-        android:id="@+id/imageView68"
+        android:id="@+id/imageView62"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.745"
-        app:srcCompat="@android:drawable/checkbox_on_background" />
+        app:layout_constraintVertical_bias="0.633"
+        app:srcCompat="@drawable/dekor1" />
 
-    <TextView
-        android:id="@+id/textView53"
-        android:layout_width="376dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="31dp"
-        android:text="Daftar Beasiswa"
-        android:textColor="#7D8BB7"
-        android:textSize="14sp"
+    <ImageView
+        android:id="@+id/imageView63"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.978"
-        app:layout_constraintStart_toEndOf="@+id/imageView40"
-        app:layout_constraintStart_toStartOf="@+id/imageView40"
-        app:layout_constraintTop_toTopOf="@+id/imageView67"
-        app:layout_constraintVertical_bias="0.678" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.832"
+        app:srcCompat="@drawable/dekor2" />
+
+    <Button
+        android:id="@+id/buttonN"
+        android:layout_width="315dp"
+        android:layout_height="60dp"
+        android:backgroundTint="#FFC727"
+        android:text="Ajukan"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.814" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
