--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -35,7 +35,8 @@
         android:hint="Email"
         android:minHeight="48dp"
         android:padding="10sp"
-        android:textColor="#7D8BB7"
+        android:textColor="#A9A9A9"
+        android:textColorHint="#A9A9A9"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +53,8 @@
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:padding="10dp"
-        android:textColor="#7D8BB7"
+        android:textColor="#A9A9A9"
+        android:textColorHint="#A9A9A9"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
