--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,7 +36,8 @@
         android:hint="Nama Pengguna"
         android:minHeight="48dp"
         android:padding="10sp"
-        android:textColor="#000000"
+        android:textColor="#A9A9A9"
+        android:textColorHint="#A9A9A9"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +53,8 @@
         android:hint="Email"
         android:minHeight="48dp"
         android:padding="10sp"
-        android:textColor="#000000"
+        android:textColor="#A9A9A9"
+        android:textColorHint="#A9A9A9"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +71,8 @@
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:padding="10dp"
-        android:textColor="#000000"
+        android:textColor="#A9A9A9"
+        android:textColorHint="#A9A9A9"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
